<resources>
    <string name="app_name">erp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">登录</string>
    <string name="enter_pwd">请输入密码</string>
    <string name="enter_username">请输入账号</string>
    <string name="remenberpwd">记住密码</string>
    <string name="login_settting">设置</string>
    <string name="setting_ip">ip地址</string>
    <string name="setting_port">端口号</string>
    <string name="sure">确定</string>
    <string name="main_home">首页</string>
    <string name="main_message">消息</string>
    <string name="main_file_cabinet">文件柜</string>
    <string name="main_my">我的</string>
    <string name="home_title">娲石</string>
    <string name="home_waitwork">待办工作</string>
    <string name="home_workdone">已办工作</string>
    <string name="home_delegatework">委托工作</string>
    <string name="home_creatwork">新建工作</string>
    <string-array name="home_grid_text">
        <item>印章</item>
        <item>邮件</item>
        <item>新闻</item>
        <item>公告</item>
        <item>会议</item>
        <item>生产</item>
        <item>采购</item>
        <item>仓库</item>
        <item>销售</item>
        <item>财务</item>
    </string-array>
    <string name="file_cabinet_actPersonal_title">工作文件夹</string>
    <string name="my_editor_head">编辑头像</string>
    <string name="my_userinfo">个人信息</string>
    <string name="my_contact">联系方式</string>
    <string name="my_changepwd">密码修改</string>
    <string name="my_log_out">退出登录</string>
    <string name="contact_type_mobile">手机</string>
    <string name="contact_type_telephone">电话</string>
    <string name="contact_type_email">邮箱</string>
    <string name="contact_type_wechat">微信</string>
    <string name="contact_type_qq">QQ</string>
    <string name="contact_type_other">其他</string>
    <string name="personal_info_name">姓名</string>
    <string name="personal_info_gender">性别</string>
    <string name="personal_info_male">男</string>
    <string name="personal_info_female">女</string>
    <string name="personal_info_position">职位</string>
    <string name="personal_info_hobby">兴趣爱好</string>
    <string name="personal_info_native_place">籍贯</string>
    <string name="personal_info_address">联系地址</string>
    <string name="personal_info_sms_remind">短信提醒</string>
    <string name="remark">备注</string>
    <string name="write_email_receiver">收件人</string>
    <string name="write_email_copyto">抄送人</string>
    <string name="write_email_theme">主题</string>
    <string name="write_email_attachment">附件</string>
    <string name="add">添加</string>
    <string name="write_email_body_content">正文内容</string>
</resources>
