<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/srl"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_29"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_26"
                android:padding="@dimen/dp_16">

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/username"
                    android:drawablePadding="@dimen/dp_16"
                    android:hint="@string/enter_username" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_26"
                android:layout_marginRight="@dimen/dp_26"
                android:background="@color/driver" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_26"
                android:padding="@dimen/dp_16">

                <EditText
                    android:id="@+id/etPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/pwd"
                    android:drawablePadding="@dimen/dp_16"
                    android:hint="@string/enter_pwd"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_27"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_27"
                android:background="@drawable/gradient_button"
                android:text="@string/login"
                android:textColor="@color/white" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_28"
                android:layout_marginTop="@dimen/dp_17"
                android:layout_marginRight="@dimen/dp_27"
                >
            <CheckBox
                android:id="@+id/cbRemenberPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/remenberpwd"
                android:textColor="@color/login_remenberpwd" />

                <TextView
                    android:id="@+id/tvSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_settting"
                    android:textColor="@color/login_setting"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>