<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical">

    <LinearLayout
        android:paddingRight="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textColor="@color/home_title"
            android:textSize="@dimen/sp_20" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/homebackground" />
    </LinearLayout>

    <LinearLayout
        android:paddingRight="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/llWaitWork"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWaitWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:textColor="@color/home_workwait"
                android:textSize="@dimen/sp_19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_waitwork"
                android:textColor="@color/home_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDoneWork"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDoneWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:textColor="@color/home_otherwork"
                android:textSize="@dimen/sp_19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_workdone"
                android:textColor="@color/home_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDelegateWork"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDelegateWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:textColor="@color/home_otherwork"
                android:textSize="@dimen/sp_19" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_delegatework"
                android:textColor="@color/home_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCreateWork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/creat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_creatwork"
                android:textColor="@color/home_text" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvInfo"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>