<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_name"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="13100673148"
            android:textColor="@color/contact_type_edit"
            android:background="@null"
            android:layout_marginLeft="@dimen/dp_54"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        android:layout_marginLeft="@dimen/dp_15"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_gender"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp_54"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/personal_info_female"
                android:drawableLeft="@drawable/gender"
                android:drawablePadding="@dimen/dp_10"
                android:checked="true"
                />
            <RadioButton
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/personal_info_male"
                android:drawableLeft="@drawable/gender"
                android:drawablePadding="@dimen/dp_10"
                />
        </RadioGroup>
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="@dimen/sp_15"-->
            <!--android:hint="027-88936208"-->
            <!--android:textColor="@color/contact_type_edit"-->
            <!--android:background="@null"-->
            <!--android:layout_marginLeft="@dimen/dp_54"-->
            <!--/>-->
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        android:layout_marginLeft="@dimen/dp_15"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_position"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="13100673148@email.com"
            android:textColor="@color/contact_type_edit"
            android:background="@null"
            android:layout_marginLeft="@dimen/dp_54"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        android:layout_marginLeft="@dimen/dp_15"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_hobby"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="13100673148"
            android:textColor="@color/contact_type_edit"
            android:background="@null"
            android:layout_marginLeft="@dimen/dp_54"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        android:layout_marginLeft="@dimen/dp_15"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_native_place"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="13100673148"
            android:textColor="@color/contact_type_edit"
            android:background="@null"
            android:layout_marginLeft="@dimen/dp_54"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        android:layout_marginLeft="@dimen/dp_15"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_address"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="13100673148"
            android:textColor="@color/contact_type_edit"
            android:background="@null"
            android:layout_marginLeft="@dimen/dp_54"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/personal_info_sms_remind"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <com.hszl.erp.ui.MySwitchButton
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_54"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        android:layout_marginLeft="@dimen/dp_15"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_13"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textColor="@color/contact_type_text"
            android:textSize="@dimen/sp_15"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="13100673148"
            android:textColor="@color/contact_type_edit"
            android:background="@null"
            android:layout_marginLeft="@dimen/dp_54"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        android:layout_marginLeft="@dimen/dp_15"
        />
</LinearLayout>