<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/rlMyTop"
        android:paddingBottom="@dimen/dp_45"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_6"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="王大锤"
                android:textColor="@color/home_title"
                android:textSize="@dimen/sp_20"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="131 0067 3148"
                android:textColor="@color/login_remenberpwd"
                android:textSize="@dimen/sp_15"
                android:layout_marginTop="@dimen/dp_12"
                />
            <TextView
                android:padding="@dimen/dp_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/my_editor_head"
                android:text="@string/my_editor_head"
                android:textSize="@dimen/sp_15"
                android:drawableRight="@drawable/editor"
                android:drawablePadding="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_26"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="@dimen/dp_70"
            android:maxWidth="@dimen/dp_70"
            android:src="@drawable/head"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_18"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/userinfo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_userinfo"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/home_title"
            android:textSize="@dimen/sp_16"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_18"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/contact"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_contact"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/home_title"
            android:textSize="@dimen/sp_16"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cabinet_list_line"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_15"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_18"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/changepwd"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_changepwd"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/home_title"
            android:textSize="@dimen/sp_16"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dp_26"
        android:text="@string/my_log_out"
        android:textColor="@color/main_checked"
        android:textSize="@dimen/sp_18"
        />

</LinearLayout>